--- a/cytoatlas-api/static/index.html
+++ b/cytoatlas-api/static/index.html
@@ -14,6 +14,9 @@
     <!-- Plotly for visualizations -->
     <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
 
+    <!-- D3 for network visualizations -->
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+
     <!-- Styles -->
     <link rel="stylesheet" href="/static/css/main.css">
 </head>
