--- a/visualization/index.html
+++ b/visualization/index.html
@@ -1293,9 +1293,9 @@
                 <button class="tab" data-tab="inflam-age-bmi">Age & BMI</button>
                 <button class="tab" data-tab="inflam-age-bmi-stratified">Age/BMI Stratified</button>
                 <button class="tab" data-tab="inflam-disease">Disease</button>
+                <button class="tab" data-tab="disease-sankey">Disease Flow</button>
                 <button class="tab" data-tab="inflam-differential">Differential</button>
                 <button class="tab" data-tab="treatment-response">Treatment Response</button>
-                <button class="tab" data-tab="disease-sankey">Disease Flow</button>
                 <button class="tab" data-tab="cohort-validation">Validation</button>
                 <button class="tab" data-tab="inflam-longitudinal">Longitudinal</button>
                 <button class="tab" data-tab="inflam-severity">Severity</button>
@@ -1482,6 +1482,26 @@
                 </div>
             </div>
 
+            <!-- Disease Flow Tab -->
+            <div class="tab-content" id="tab-disease-sankey">
+                <div class="controls">
+                    <div class="control-group">
+                        <label>View</label>
+                        <select id="sankey-view">
+                            <option value="study-disease">Study → Disease</option>
+                            <option value="disease-group">Disease → Disease Group</option>
+                            <option value="study-group">Study → Disease Group</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="viz-container" style="min-height: 600px;">
+                    <div class="viz-title">Sample Flow Diagram</div>
+                    <div class="viz-subtitle" id="sankey-subtitle">Distribution of 1,047 samples across 25 studies and 20 diseases</div>
+                    <div id="disease-sankey" class="loading">Loading data...</div>
+                </div>
+            </div>
+
             <!-- Differential Tab (Disease vs Healthy) -->
             <div class="tab-content" id="tab-inflam-differential">
                 <div class="controls">
@@ -1564,26 +1584,6 @@
                     <div class="viz-title">Response Prediction Scores</div>
                     <div class="viz-subtitle">Distribution of predicted probabilities for responders vs non-responders</div>
                     <div id="treatment-violin" class="loading">Loading data...</div>
-                </div>
-            </div>
-
-            <!-- Disease Sankey Tab -->
-            <div class="tab-content" id="tab-disease-sankey">
-                <div class="controls">
-                    <div class="control-group">
-                        <label>View</label>
-                        <select id="sankey-view">
-                            <option value="cohort-disease">Cohort → Disease</option>
-                            <option value="disease-celltype">Disease → Cell Type</option>
-                            <option value="disease-treatment">Disease → Treatment</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="viz-container" style="min-height: 600px;">
-                    <div class="viz-title">Patient Flow Diagram</div>
-                    <div class="viz-subtitle" id="sankey-subtitle">Sample distribution across cohorts and diseases</div>
-                    <div id="disease-sankey" class="loading">Loading data...</div>
                 </div>
             </div>
 
@@ -7172,55 +7172,137 @@
             if (!container) return;
             container.classList.remove('loading');
 
-            // Try to use real data
             const sankeyData = state.data.diseasesankey;
-            let plotData;
+            const viewType = document.getElementById('sankey-view')?.value || 'study-disease';
+            const subtitleEl = document.getElementById('sankey-subtitle');
 
-            if (sankeyData && sankeyData.nodes && sankeyData.links) {
-                const nodeLabels = sankeyData.nodes.map(n => n.name);
-                const nodeColors = sankeyData.nodes.map(n => {
-                    if (n.type === 'cohort') return '#1f77b4';
-                    if (n.type === 'disease') return '#ff7f0e';
-                    return '#2ca02c';
-                });
-
-                plotData = {
-                    type: 'sankey',
-                    orientation: 'h',
-                    node: {
-                        pad: 15,
-                        thickness: 20,
-                        line: { color: 'black', width: 0.5 },
-                        label: nodeLabels,
-                        color: nodeColors
-                    },
-                    link: {
-                        source: sankeyData.links.map(l => l.source),
-                        target: sankeyData.links.map(l => l.target),
-                        value: sankeyData.links.map(l => l.value)
-                    }
-                };
-            } else {
-                // Fallback to sample data
-                plotData = {
-                    type: 'sankey',
-                    orientation: 'h',
-                    node: {
-                        pad: 15,
-                        thickness: 20,
-                        line: { color: 'black', width: 0.5 },
-                        label: ['Main Cohort', 'Validation', 'External', 'RA', 'IBD', 'Psoriasis', 'Asthma', 'Other'],
-                        color: ['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728', '#9467bd', '#8c564b', '#e377c2', '#7f7f7f']
-                    },
-                    link: {
-                        source: [0, 0, 0, 0, 0, 1, 1, 1, 2, 2, 2],
-                        target: [3, 4, 5, 6, 7, 3, 4, 5, 3, 4, 7],
-                        value: [120, 150, 80, 60, 40, 50, 60, 30, 40, 50, 30]
-                    }
-                };
+            if (!sankeyData || !sankeyData.nodes || !sankeyData.links) {
+                container.innerHTML = '<p style="text-align:center; color:#666; padding:2rem;">No sankey data available</p>';
+                return;
             }
 
-            Plotly.newPlot(container, [plotData], {
+            // Build node index map
+            const nodeMap = {};
+            sankeyData.nodes.forEach((n, i) => { nodeMap[n.name] = i; });
+
+            // Filter nodes and links based on view type
+            let filteredNodes = [];
+            let filteredLinks = [];
+            let subtitle = '';
+
+            if (viewType === 'study-disease') {
+                // Show: Study → Disease
+                const cohortNodes = sankeyData.nodes.filter(n => n.type === 'cohort');
+                const diseaseNodes = sankeyData.nodes.filter(n => n.type === 'disease');
+                filteredNodes = [...cohortNodes, ...diseaseNodes];
+
+                // Create new index map
+                const newNodeMap = {};
+                filteredNodes.forEach((n, i) => { newNodeMap[n.name] = i; });
+
+                // Filter links: cohort → disease only
+                sankeyData.links.forEach(l => {
+                    const sourceNode = sankeyData.nodes[l.source];
+                    const targetNode = sankeyData.nodes[l.target];
+                    if (sourceNode.type === 'cohort' && targetNode.type === 'disease') {
+                        filteredLinks.push({
+                            source: newNodeMap[sourceNode.name],
+                            target: newNodeMap[targetNode.name],
+                            value: l.value
+                        });
+                    }
+                });
+                subtitle = `${cohortNodes.length} studies → ${diseaseNodes.length} diseases (1,047 samples)`;
+
+            } else if (viewType === 'disease-group') {
+                // Show: Disease → Disease Group
+                const diseaseNodes = sankeyData.nodes.filter(n => n.type === 'disease');
+                const groupNodes = sankeyData.nodes.filter(n => n.type === 'disease_group');
+                filteredNodes = [...diseaseNodes, ...groupNodes];
+
+                const newNodeMap = {};
+                filteredNodes.forEach((n, i) => { newNodeMap[n.name] = i; });
+
+                sankeyData.links.forEach(l => {
+                    const sourceNode = sankeyData.nodes[l.source];
+                    const targetNode = sankeyData.nodes[l.target];
+                    if (sourceNode.type === 'disease' && targetNode.type === 'disease_group') {
+                        filteredLinks.push({
+                            source: newNodeMap[sourceNode.name],
+                            target: newNodeMap[targetNode.name],
+                            value: l.value
+                        });
+                    }
+                });
+                subtitle = `${diseaseNodes.length} diseases → ${groupNodes.length} disease groups`;
+
+            } else if (viewType === 'study-group') {
+                // Show: Study → Disease Group (aggregate)
+                const cohortNodes = sankeyData.nodes.filter(n => n.type === 'cohort');
+                const groupNodes = sankeyData.nodes.filter(n => n.type === 'disease_group');
+                filteredNodes = [...cohortNodes, ...groupNodes];
+
+                const newNodeMap = {};
+                filteredNodes.forEach((n, i) => { newNodeMap[n.name] = i; });
+
+                // Build cohort → group links by aggregating through diseases
+                const cohortGroupCounts = {};
+                sankeyData.links.forEach(l => {
+                    const sourceNode = sankeyData.nodes[l.source];
+                    const targetNode = sankeyData.nodes[l.target];
+                    if (sourceNode.type === 'cohort' && targetNode.type === 'disease') {
+                        // Find disease → group link
+                        sankeyData.links.forEach(l2 => {
+                            const s2 = sankeyData.nodes[l2.source];
+                            const t2 = sankeyData.nodes[l2.target];
+                            if (s2.name === targetNode.name && t2.type === 'disease_group') {
+                                const key = `${sourceNode.name}|${t2.name}`;
+                                cohortGroupCounts[key] = (cohortGroupCounts[key] || 0) + l.value;
+                            }
+                        });
+                    }
+                });
+
+                Object.entries(cohortGroupCounts).forEach(([key, value]) => {
+                    const [cohort, group] = key.split('|');
+                    if (newNodeMap[cohort] !== undefined && newNodeMap[group] !== undefined) {
+                        filteredLinks.push({
+                            source: newNodeMap[cohort],
+                            target: newNodeMap[group],
+                            value: value
+                        });
+                    }
+                });
+                subtitle = `${cohortNodes.length} studies → ${groupNodes.length} disease groups`;
+            }
+
+            // Assign colors based on node type
+            const nodeColors = filteredNodes.map(n => {
+                if (n.type === 'cohort') return '#1f77b4';
+                if (n.type === 'disease') return '#ff7f0e';
+                if (n.type === 'disease_group') return '#2ca02c';
+                return '#7f7f7f';
+            });
+
+            if (subtitleEl) subtitleEl.textContent = subtitle;
+
+            Plotly.purge(container);
+            Plotly.newPlot(container, [{
+                type: 'sankey',
+                orientation: 'h',
+                node: {
+                    pad: 15,
+                    thickness: 20,
+                    line: { color: 'black', width: 0.5 },
+                    label: filteredNodes.map(n => n.name),
+                    color: nodeColors
+                },
+                link: {
+                    source: filteredLinks.map(l => l.source),
+                    target: filteredLinks.map(l => l.target),
+                    value: filteredLinks.map(l => l.value)
+                }
+            }], {
                 margin: { t: 30, b: 30, l: 30, r: 30 },
                 height: 550
             }, { responsive: true });
