Include IFNG and other key cytokines in SecAct filtered data
- Add must-include list: IFNG, IL1B, IL6, IL10, TNF, TGFB1, VEGFA, CCL2-4, CXCL8/10
- Update default SecAct signature to IFNG (now available)
- Regenerate embedded_data.js with 204 SecAct signatures

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -6334,7 +6334,7 @@
                     const sigs = getInflamDiseaseSignatures();
                     if (sigType === 'SecAct' && sigs.length > 0) {
                         // Find a common SecAct signature as default, or use first available
-                        const defaultSecAct = ['CCL3', 'S100A8', 'GRN', 'CTSB'].find(s => sigs.includes(s)) || sigs[0];
+                        const defaultSecAct = ['IFNG', 'CCL3', 'S100A8', 'GRN', 'CTSB'].find(s => sigs.includes(s)) || sigs[0];
                         searchInput.value = defaultSecAct;
                     } else {
                         searchInput.value = 'IFNG';
